--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,6 +16,11 @@ pipeline {
                 }
             }
         }
+        stage('Complete') {
+            steps {
+                echo 'Job complete!'
+            }
+        }
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
